--- a/_drafts/2015-02-10-standard.md
+++ b/_drafts/2015-02-10-standard.md
@@ -1,10 +1,24 @@
 ---
-author: someone
+author: Rosand
 title: Standard Post
 featimg: 1.jpg
 tags: [text]
 category: [standard]
 ---
-Here you can see the basic post. No fancy type, no setting and the featured image is just embedded into the content.
 
-The front matter for that basic post just consists of the basic tags, author, title, featimg, tags and category.
+
+<br>
+
+<b><u>Summary:</u></b>
+<b>Designer:</b> 
+<b>Year Published:</b> 
+<b>Awards:</b> 
+<b># of Players:</b> 
+<b>Suggested Age:</b> 
+<b>Setup Time:</b> 
+<b>Avg. Playing Time:</b> 
+<b>Rating:</b> 
+<b>Price Range:</b>
+
+<br>
+
